--- a/pom.xml
+++ b/pom.xml
@@ -89,10 +89,47 @@
       <scope>test</scope>
     </dependency>
       <dependency>
-          <groupId>com.googlecode.json-simple</groupId>
-          <artifactId>json-simple</artifactId>
-          <version>1.1.1</version>
+          <groupId>org.mobicents.external.freetts</groupId>
+          <artifactId>freetts</artifactId>
+          <version>1.0</version>
+      </dependency>
+      <dependency>
+          <groupId>org.mobicents.external.freetts</groupId>
+          <artifactId>en_us</artifactId>
+          <version>1.0</version>
+      </dependency>
+      <dependency>
+          <groupId>org.mobicents.external.freetts</groupId>
+          <artifactId>cmu_us_kal</artifactId>
+          <version>1.0</version>
+      </dependency>
+      <dependency>
+          <groupId>org.mobicents.external.freetts</groupId>
+          <artifactId>cmulex</artifactId>
+          <version>1.0</version>
+      </dependency>
+      <dependency>
+          <groupId>org.mobicents.external.freetts</groupId>
+          <artifactId>cmudict04</artifactId>
+          <version>1.0</version>
       </dependency></dependencies>
+
+    <repositories>
+        <repository>
+            <id>mobicents-public-repository-group</id>
+            <name>Mobicents Public Maven Repository Group</name>
+            <url>https://www.mobicents.org/maven/repositories/public/</url>
+            <layout>default</layout>
+            <releases>
+                <enabled>true</enabled>
+                <updatePolicy>never</updatePolicy>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>never</updatePolicy>
+            </snapshots>
+        </repository>
+    </repositories>
 
   <build>
     <plugins>
