--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,13 @@
           <groupId>org.mobicents.external.freetts</groupId>
           <artifactId>cmudict04</artifactId>
           <version>1.0</version>
-      </dependency></dependencies>
+      </dependency>
+      <dependency>
+          <groupId>com.google.code.gson</groupId>
+          <artifactId>gson</artifactId>
+          <version>2.13.1</version>
+      </dependency>
+  </dependencies>
 
     <repositories>
         <repository>
