--- a/pom.xml
+++ b/pom.xml
@@ -152,7 +152,7 @@
             <!-- Default configuration for running with: mvn clean javafx:run -->
             <id>default-cli</id>
             <configuration>
-              <mainClass>com.example.s2tn/com.example.s2tn.HelloApplication</mainClass>
+              <mainClass>com.example.s2tn/com.s2tn.HelloApplication</mainClass>
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
