--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,12 @@
           <artifactId>cmudict04</artifactId>
           <version>1.0</version>
       </dependency>
+      <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+      <dependency>
+          <groupId>com.google.code.gson</groupId>
+          <artifactId>gson</artifactId>
+          <version>2.13.2</version>
+      </dependency>
   </dependencies>
 
     <repositories>
